src/objects/HR_Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>ApplicantName__c</fullName>
        <formula>Owner:User.FirstName &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Accepted Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Rejected Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview - Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview - Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview - Stage 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Tendered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Job Applications</relationshipLabel>
        <relationshipName>HR_Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Job</label>
        <referenceTo>HR_Job__c</referenceTo>
        <relationshipLabel>HR Job Applications</relationshipLabel>
        <relationshipName>HR_Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Date you can start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HR Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>HR  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>